# Middleware_Omnichat

./: .env  .gitignore  Dockerfile  README.md  _fulfillmentSetter.py  analyzePizzaIntent.py  api.py  app.py  dialogFlowSession.py  dialogflow.json  dialogflow_handler.py  dialogflow_session.py  docker-compose.yaml  locustfile.py  main.py  main_api.py  messageConverter.py  mocks.py  nginx.conf  pizzaGPT.py  pyproject.toml  requirements.txt  utils.py
api/: api_config.py  api_core.py
api_config/: api_config.py  api_core_app.py  api_setup.py  cache_updater.py  object_factory.py  object_updater.py
api_routes/: conversation_routes.py  order_routes.py  speisekarte_routes.py  test_routes.py  user_routes.py
authentication/: credentials_loader.py  dialogflow_auth.py  sdk_dict.py
cache/: whatsapp_user_cache.py
cloudFunctionsCalls/: cloud_functions_calls.py
data/: good_speisekarte.json  menu_item_handler.py  messageConverter.py  message_converter.py  speisekarte.json  speisekarteExtraction.py  speisekarte_extraction.py  speisekarte_loader.py  test_speisekarteExtraction.py
dialogflowFolder/: dialogflow_session.py  dialogflow_session_manager.py  session_manager.py
docs/: helper_components.md  overview.md
firebaseCache/: cache_table.json  cache_utils.py  conversation_cache.py
firebaseFolder/: FirebaseUser.py  firebaseConnection.py  firebaseConversation.py  firebaseUser.py  firebase_cache.py  firebase_connection.py  firebase_conversation.py  firebase_core_wrapper.py  firebase_credentials.py  firebase_order.py  firebase_speisekarte.py  firebase_user.py
gui/: main_ui.py  (+3 more)
(+140 files in other folders)
